--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="https://github.com/Soapy"><i class="fa fa-laptop"></i></a>
+                        <li><a href="mailto:someone@stefanheng360@gmail.com"><i class="fa fa-laptop"></i></a>
                         <li><a href="https://github.com/Soapy"><i class="fa fa-github"></i></a>
                         <li><a href="https://www.linkedin.com/in/stefan-heng/"><i class="fa fa-linkedin"></i></a>
                         </li>
