updated color scheme for portfolio section

--- a/index.html
+++ b/index.html
@@ -119,16 +119,16 @@
         </div>
     </section>
         <!-- About Section -->
-    <!--<section id="experience">
+    <section id="experience">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Experience</h2>
-                    <h3 class="section-subheading text-muted">Here are my past Coop Experience.</h3>
+                    <h3 class="section-subheading text-muted">Here's where my current education and work experience are at.</h3>
                 </div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
-                        <h4 class="subheading">Abebooks - An Amazon Company</h4>
+                        <h4 class="subheading">Christian Brothers University</h4>
                         <h5>May 2017 - Sep 2017</h5>
                         <h5 class="subheading">Software Developer (SDE)</h5>
                     </div>
@@ -155,7 +155,7 @@
     </section>
 -->
     <!-- Portfolio Grid Section -->
-    <section id="portfolio">
+    <section id="portfolio" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -235,7 +235,7 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="mailto:someone@stefanheng360@gmail.com"><i class="fa fa-laptop"></i></a>
+                        <li><a href="mailto:stefanheng360@gmail.com"><i class="fa fa-laptop"></i></a>
                         <li><a href="https://github.com/Soapy"><i class="fa fa-github"></i></a>
                         <li><a href="https://www.linkedin.com/in/stefan-heng/"><i class="fa fa-linkedin"></i></a>
                         </li>
