fixed pathspec error

--- a/index.html
+++ b/index.html
@@ -128,28 +128,14 @@
                 </div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
-                        <h4 class="subheading">Christian Brothers University</h4>
-                        <h5>May 2017 - Sep 2017</h5>
-                        <h5 class="subheading">Software Developer (SDE)</h5>
+                        <h2 class="subheading">Christian Brothers University</h4>
+                        <h5>August 2017 - Present</h5>
+                        <h5 class="subheading">Computer Science Major</h5>
                     </div>
                     <div class="timeline-body">
-                        <p class="text-muted">Full Stack Developer for a company which creates a global marketplace that offers Books, Fine Art and Collectibles from sellers in 50+ countries </p>
-                        <p class="text-muted">Prototyped the integration between an external payment service and the existing software systems to evaluate compatibility and help deciding the prospect of future business.</p>
-                        <p class="text-muted">Developed and maintained softwares that deal with the ecommerce side of the business</p>
+                        <p class="text-muted">Current Junior at Christian Brothers University. Plans to graduate May 2021.</p>
                     </div>
                 </div>
-                <div class="timeline-panel">
-                    <div class="timeline-heading">
-                        <h4 class="subheading">Realty Server</h4>
-                        <h5>Sep 2016- Dec 2016</h5>
-                        <h5 class="subheading">Software Developer</h5>
-                    </div>
-                        <div class="timeline-body">
-                            <p class="text-muted">Full Stack Developer for a company that provides real estate data</p>
-                            <p class="text-muted">Implemented new features and maintain existing features using PostgreSQL, Java, Velocity template and jQuery for front end development</p>
-                        </div>
-                </div>
-
             </div>
         </div>
     </section>
