fixed misaligned layout on mobile for portfolio section

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         <a href="https://github.com/Soapy/Asteroids" title="Source code"><i class="fa fa-github fa-2x fa-fw"></i></a>
                         <a href="https://soapy.github.io/Asteroids/" title="Try it"><i class="fa fa-external-link fa-2x fa-fw"></i></a>
                         <p class="text-muted">Javascript game that implements the classic game of Asteroids. 
-                            Due to complaints, the game's difficulty has been lowered for the general public</p>
+                            Due to complaints, the game's difficulty has been lowered for the general public.</p>
                     </div>
                 </div>
                 </div>
