--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact me!</h2>
-                    <h4 class="section-heading">Connect with me via email, linkedin and more below.</h3>
+                    <h4 class="section-heading">Connect with me via email at <a href="mailto:stefanheng360@gmail.com">stefanheng360@gmail.com</a></h3>
                 </div>
             </div>
         </div>
