--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <a class="page-scroll" href="#aboutme">About Me</a>
                     </li>
                     <li>
-                        <!--<a class="page-scroll" href="#experience">Experience</a>-->
+                        <a class="page-scroll" href="#experience">Experience</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Personal Projects</a>
