--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Me</h2>
-                    <h3 class="section-subheading text-muted">I am currently a Junior at Christian Brothers University In my free time, I like to ...</h3>
+                    <h3 class="section-subheading">I am currently a Junior at Christian Brothers University.</h3>
+                    <h3 class="section-subheading">In my free time, I like to ...</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -221,7 +222,6 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="mailto:stefanheng360@gmail.com"><i class="fa fa-laptop"></i></a>
                         <li><a href="https://github.com/Soapy"><i class="fa fa-github"></i></a>
                         <li><a href="https://www.linkedin.com/in/stefan-heng/"><i class="fa fa-linkedin"></i></a>
                         </li>
