--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link href="css/agency.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 
-
+    <link rel="shortcut icon" href="img\about\favicon.ico" type="image/ico">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
